# Murmur

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  config.default.toml  pyproject.toml  run.bat  run_test.bat
scripts/: download_models.py
src/murmur/: __main__.py  app.py  config.py  hardware.py  presets.py
src/murmur/audio/: capture.py  process_capture.py  sessions.py
src/murmur/pipeline/: stt.py  translation_buffer.py  translator.py  vad.py  worker.py
src/murmur/ui/: __init__.py  bridge.py  hotkeys.py  model_download.py  overlay.py  settings.py  tray.py  wizard.py
tests/: test_capture.py  test_pipeline.py  test_process_capture.py  test_realtime_stt.py  test_sessions.py  test_stt.py  test_translator.py
